// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bullet > renders correctly with a text 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`Bullet > renders correctly with an icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

.emotion-2 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-2 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <svg
        class="emotion-2 emotion-3"
        fill="none"
        height="20"
        viewBox="0 0 16 16"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M7.207 2.444c.22.176.316.463.247.736a6.681 6.681 0 0 0 9.505 7.605.716.716 0 0 1 1.019.813A8.113 8.113 0 1 1 6.435 2.366a.72.72 0 0 1 .772.078"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Bullet > renders correctly with an icon and icon variant 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

.emotion-2 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-2 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <svg
        class="emotion-2 emotion-3"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.132 1.18c.176.175.228.44.133.67a6.029 6.029 0 0 0 7.886 7.886.613.613 0 0 1 .802.801A7.257 7.257 0 0 1 1 7.745a7.26 7.26 0 0 1 4.463-6.698.61.61 0 0 1 .67.133M4.69 2.883a6.029 6.029 0 1 0 8.427 8.427A7.255 7.255 0 0 1 4.69 2.883"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Bullet > sentiment > render danger 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #b3144d;
  background: #ffebf2;
  border: 1px solid #ffebf2;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`Bullet > sentiment > render disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #727683;
  background: #e9eaeb;
  border: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`Bullet > sentiment > render info 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #005da3;
  background: #e0f2ff;
  border: 1px solid #e0f2ff;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`Bullet > sentiment > render neutral 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`Bullet > sentiment > render primary 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`Bullet > sentiment > render secondary 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ac22e7;
  background: #f9ebff;
  border: 1px solid #f9ebff;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`Bullet > sentiment > render success 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #22674e;
  background: #daf6ec;
  border: 1px solid #daf6ec;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`Bullet > sentiment > render warning 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #7c5400;
  background: #fff6e6;
  border: 1px solid #fff6e6;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`Bullet > size > render medium 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`Bullet > size > render small 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 1.5rem;
  height: 1.5rem;
  font-size: 0.875rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;
